# POO_Lab_2023_2024

./: CMakeLists.txt  main.cpp
bunicuta/: BucatariaBunicutei.cpp  BucatariaBunicutei.h  BunicutaTest.cpp  BunicutaTest.h  Forma.cpp  Forma.h  FormaDreptunghi.cpp  FormaDreptunghi.h  FormaPatrat.cpp  FormaPatrat.h  MeniuBucatariaBunicutei.cpp  MeniuBucatariaBunicutei.h
complex/: Complex.cpp  Complex.h  ComplexTest.cpp  ComplexTest.h
